<resources>
    <string name="app_name">清洁架构</string>

    <string name="main_navigation">主页</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_square">广场</string>
    <string name="main_navigation_message">消息</string>
    <string name="main_navigation_mine">我的</string>

    <string name="message_system_notify">系统通知</string>
    <string name="message_user_notify">用户通知</string>

    <string name="person_trends_label">动态</string>
    <string name="person_follow_label">关注</string>
    <string name="person_fans_label">粉丝</string>

    <string name="settings_label">设置</string>
    <string name="settings_person_info_label">个人信息</string>
    <string name="settings_manage_space_label">空间管理</string>
    <string name="settings_about_us_label">关于我们</string>
    <string name="settings_logout_label">退出登录</string>
    <string name="settings_version_info">Clean Arch Version %1$s</string>

    <string name="login_label">登录</string>
    <string name="register_label">注册</string>

    <string name="image_preview_label">图片预览</string>

    <string name="image_content_description">图片</string>

    <string name="state_empty_no_data">暂无数据</string>

    <string-array name="news_titles">
        <item>头条</item>
        <item>社会</item>
        <item>国内</item>
        <item>国际</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
        <item>时尚</item>
    </string-array>

    <string-array name="news_keys">
        <item>top</item>
        <item>shehui</item>
        <item>guonei</item>
        <item>guoji</item>
        <item>yule</item>
        <item>tiyu</item>
        <item>junshi</item>
        <item>keji</item>
        <item>caijing</item>
        <item>shishang</item>
    </string-array>

</resources>