<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cc.buddies.cleanarch.main.fragment.HomeFragment"
        android:label="@string/main_navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_square"
        android:name="cc.buddies.cleanarch.main.fragment.SquareFragment"
        android:label="@string/main_navigation_square"
        tools:layout="@layout/fragment_square" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="cc.buddies.cleanarch.main.fragment.MessageFragment"
        android:label="@string/main_navigation_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="cc.buddies.cleanarch.main.fragment.MineFragment"
        android:label="@string/main_navigation_mine"
        tools:layout="@layout/fragment_mine">

        <!-- 导航 设置 -->
        <action
            android:id="@+id/action_to_settings"
            app:destination="@id/settings_navigation"
            app:enterAnim="@anim/custom_activity_open_enter"
            app:exitAnim="@anim/custom_activity_open_exit"
            app:popEnterAnim="@anim/custom_activity_close_enter"
            app:popExitAnim="@anim/custom_activity_close_exit"/>

    </fragment>

    <!-- 导航 登录 -->
    <action
        android:id="@+id/action_to_login"
        app:destination="@id/login_navigation"
        app:enterAnim="@anim/custom_activity_open_enter"
        app:exitAnim="@anim/custom_activity_open_exit"
        app:popEnterAnim="@anim/custom_activity_close_enter"
        app:popExitAnim="@anim/custom_activity_close_exit"/>

    <!-- 登录页 导航图 -->
    <include app:graph="@navigation/login_navigation" />

    <!-- 设置页 导航图 -->
    <include app:graph="@navigation/settings_navigation" />

</navigation>