<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/message_background_color"
        android:orientation="vertical">

        <include layout="@layout/layout_appbar_dark" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_person_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?attr/colorSurface"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/text_person_info_label"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_person_info_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/image_person_info_arrow"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_person_info_arrow"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/setting_arrow_icon"
                app:layout_constraintBottom_toBottomOf="@id/text_person_info_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_person_info_label"
                app:layout_constraintTop_toTopOf="@id/text_person_info_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_cache_mange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="?attr/colorSurface"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/text_cache_manager_label"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_manage_space_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/text_cache_manager_arrow"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/text_cache_manager_arrow"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/setting_arrow_icon"
                app:layout_constraintBottom_toBottomOf="@id/text_cache_manager_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_cache_manager_label"
                app:layout_constraintTop_toTopOf="@id/text_cache_manager_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="?attr/colorSurface"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/text_about_us_label"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_us_label"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/text_about_us_arrow"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/text_about_us_arrow"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/setting_arrow_icon"
                app:layout_constraintBottom_toBottomOf="@id/text_about_us_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_about_us_label"
                app:layout_constraintTop_toTopOf="@id/text_about_us_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_logout"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorSurface"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="@string/settings_logout_label"
            android:textColor="?attr/colorAccent"
            android:textSize="16sp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/settings_version_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_logout" />

    </LinearLayout>

</ScrollView>